fixing to redirect to cart first before checkout

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -544,6 +544,16 @@
       "default": 2,
       "unit": "px",
       "info": "Thickness of the hamburger icon lines"
+    },
+    {
+      "type": "header",
+      "content": "Mobile Menu Logo"
+    },
+    {
+      "type": "image_picker",
+      "id": "mobile_menu_logo_image",
+      "label": "Mobile Menu Logo Image",
+      "info": "Upload a logo image specifically for the mobile menu. If not set, the default logo image will be used."
     }
   ]
 }
