--- a/sections/contact-form-section.liquid
+++ b/sections/contact-form-section.liquid
@@ -59,7 +59,7 @@
           {% else %}
             <p>{{shop.phone}}</p>
           {% endif %}
-          <p class="text-muted">Monday To Sunday 8 AM to 8 PM</p>
+          <p class="text-muted">Monday To Sunday <br> 8 AM to 8 PM</p>
         </div>
       </div>
       <div class="col-md-6 col-lg-3 mb-4">
